add e2e tests to backend

--- a/backend/package.json
+++ b/backend/package.json
@@ -61,10 +61,7 @@
       "json",
       "ts"
     ],
-    "rootDir": "./",
-    "modulePaths": [
-      "./"
-    ],
+    "rootDir": "src",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
