add path to github action

--- a/.github/workflows/pr-lint-be.yml
+++ b/.github/workflows/pr-lint-be.yml
@@ -23,6 +23,7 @@ jobs:
       - uses: actions/setup-node@v3
         working-directory: backend
         with:
+          path: frontend
           node-version: "14.21.2"
           cache: "npm"
 
