--- a/.github/workflows/pr-lint-fe.yml
+++ b/.github/workflows/pr-lint-fe.yml
@@ -22,8 +22,9 @@ jobs:
           fetch-depth: 2
 
       - uses: actions/setup-node@v3
-      working-directory: frontend
+        working-directory: frontend
         with:
+          path: frontend
           node-version: "14.21.2"
           cache: "npm"
 
