use cache-dependency-path

--- a/.github/workflows/pr-lint-be.yml
+++ b/.github/workflows/pr-lint-be.yml
@@ -21,11 +21,10 @@ jobs:
           fetch-depth: 2
 
       - uses: actions/setup-node@v3
-        working-directory: backend
         with:
-          path: frontend
           node-version: "14.21.2"
           cache: "npm"
+          cache-dependency-path: 'backend/package-lock.json'
 
       - name: Install dependencies
         run: |
