--- a/.github/workflows/pr-lint-fe.yml
+++ b/.github/workflows/pr-lint-fe.yml
@@ -22,11 +22,10 @@ jobs:
           fetch-depth: 2
 
       - uses: actions/setup-node@v3
-        working-directory: frontend
         with:
-          path: frontend
           node-version: "14.21.2"
           cache: "npm"
+          cache-dependency-path: 'frontend/package-lock.json'
 
       - name: Install dependencies
         run: |
