--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,9 @@ commands:
       - run:
           name: Establish SSH authenticity
           working_directory: "~"
+          - add_ssh_keys:
+            fingerprints:
+              - "2a:6c:39:93:a1:35:7d:a1:41:0e:33:0b:3e:27:52:2d"
           # This step taken from: https://circleci.com/docs/2.0/gh-bb-integration/#establishing-the-authenticity-of-an-ssh-host
           command: |
             mkdir -p ~/.ssh
