--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
           working_directory: "~/project"
           command: |
             cd backend
-            npm run test:cov
+            npm run test
       - run:
           name: Backend e2e Test
           working_directory: "~/project"
